# rosmo

./: .gitignore  INSTALL.md  Makefile  README.md  pyproject.toml
.github/actions/cache/: action.yml
.github/workflows/: check.yml
experiment/atari/: config.py  main.py
experiment/bsuite/: config.py  main.py
rosmo/: __about__.py  __init__.py  env_loop_observer.py  loggers.py  profiler.py  type.py
rosmo/agent/: __init__.py  actor.py  improvement.py  improvement_op.py  learning.py  network.py  type.py  utils.py
rosmo/data/: __init__.py  bsuite.py  buffer.py  rl_unplugged_atari_baselines.json  rlu_atari.py
tests/: __init__.py  test_data.py
