[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rosmo"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Zichen", email = "liuzc@sea.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "dm-acme==0.4.0",
  "dm-launchpad-nightly==0.3.0.dev20220321",
  "dm-haiku==0.0.7",
  "dopamine-rl==3.1.2",
  "gym==0.17.2",
  "gin-config==0.3.0",
  "rlax==0.1.4",
  "tensorflow==2.8.0",
  "tensorflow-probability==0.16.0",
  "optax==0.1.3",
  "tfds-nightly",
  "rlds[tensorflow]==0.1.4",
  "wandb==0.12.19",
  "ml-collections==0.1.1",
  "dm-sonnet==2.0.0",
  "mujoco-py<2.2,>=2.1",
  "bsuite==0.3.5",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/rosmo#readme"
Issues = "https://github.com/unknown/rosmo/issues"
Source = "https://github.com/unknown/rosmo"

[tool.hatch.version]
path = "rosmo/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=rosmo --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "rosmo/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pylint.master]
load-plugins = "pylint.extensions.docparams,pylint.extensions.docstyle,pylint.extensions.no_self_use"
default-docstring-type = "google"
ignore-paths = ["rosmo/__about__.py"]

[tool.pylint.format]
max-line-length = 88
indent-after-paren = 4
indent-string = "    "

[tool.pylint.imports]
known-third-party = "wandb"

[tool.pylint.reports]
output-format = "colorized"
reports = "no"
score = "yes"
max-args = 7

[tool.pylint.messages_control]
disable = ["W0108", "W0212", "W1514", "R0902", "R0903", "R0913", "R0914", "R0915", "R1719",
"R1732", "C0103", "C3001"]

[tool.yapf]
based_on_style = "yapf"
spaces_before_comment = 4
dedent_closing_brackets = true
column_limit = 88
continuation_indent_width = 4

[tool.isort]
profile = "black"
multi_line_output = 3
indent = 4
line_length = 88
known_third_party = "wandb"

[tool.mypy]
files = "rosmo/**/*.py"
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pydocstyle]
ignore = ["D100", "D102", "D104", "D105", "D107", "D203", "D213", "D401", "D402"]


[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
